Working on combo map with heatmap and layering

--- a/app/views/pages/overlaymap.html.erb
+++ b/app/views/pages/overlaymap.html.erb
@@ -8,6 +8,7 @@
         href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
     />
 </head>
+<h1>Open Source Map utilizing Leaflet JS with layering </h1>
 <body>
     <div id="map" style="width: 600px; height: 400px"></div>
 
