--- a/app/views/pages/combo.html.erb
+++ b/app/views/pages/combo.html.erb
@@ -1,12 +1,38 @@
 <head>
+   <title>Simple Leaflet Map with Heatmap </title>
+    <meta charset="utf-8" />
+    <link
+        rel="stylesheet"
+        href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
+    />
+<style>
+        body {
+            padding: 0;
+            margin: 0;
+        }
+        html, body, #map {
+            height: 90%;
+            width: 90%;
+        }
+    </style>
 
 </head>
 
+<h1>Open Source Map utilizing Leaflet JS, layering and heatmap </h1>
 <body>   
 
 
-<script
+    <script
        src="http://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js">
     </script>
 
+    <script>
+	let portland = L.marker([43.6591, -70.2568]).bindPopup('This is Portland, ME.'), 
+	    gorham = L.marker([43.6795, -70.4442]).bindPopup('This is Gorham, ME.'), 
+	    scarborough = L.marker([43.5902, -70.3345]).bindPopup('This is Scarborough, ME.'), 
+	    biddeford = L.marker([43.4926, -70.4534]).bindPopup('This is Biddeford, ME.');
+
+	let cities = L.layerGroup([portland, gorham, scarborough, biddeford]); 
+ 
+    </script> 
 </body> 
